style: fix menu text height bug on mobile

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -5,7 +5,7 @@
 	right: 0;
 	bottom: 0;
 	display: grid;
-  grid-auto-rows: minmax(min-content, max-content);
+	grid-auto-rows: minmax(min-content, max-content);
 	background-color: #fff;
 	z-index: 5;
 	clip-path: inset(0% 0% 100% 0%);
@@ -28,20 +28,19 @@
 }
 
 .menuItem {
+	height: 115%;
 	cursor: pointer;
 	width: fit-content;
 	font: 600 16.67vh/98.49% "New York Extra Large", serif;
 	color: transparent;
 
 	@include media(">mobile") {
-		height: 110%;
 		letter-spacing: -0.06em;
 		padding-right: 2vh;
 		text-stroke: 1.5px rgb(0, 0, 0);
 		-webkit-text-stroke: 1.5px rgb(0, 0, 0);
 	}
 	@include media("<=mobile") {
-		height: fit-content;
 		font-size: 3rem;
 		white-space: nowrap;
 		letter-spacing: -0.03em;
